# AQ_Trading

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  GEMINI.md  INDEX.md  README.md  STRATEGY.md  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_timescaledb_setup.py  003_cleanup_transactions_old.py  004_alerts_tables.py  005_audit_logs.py  006_degradation.py  007_alerts_dedupe_unique_index.py  008_idempotency_keys.py  009_options_expiration_indexes.py  010_position_status.py  011_orders_table.py  012_close_requests.py  013_outbox_events.py  014_order_close_fields.py  015_greeks_snapshots.py  016_derivative_contracts.py  017_agent_results.py  018_governance_audit_log.py
backend/config/: derivatives.yaml  risk.yaml  strategies.yaml  universe.yaml
backend/config/strategies/: trend_breakout.yaml
backend/scripts/: download_data.py  generate_openapi.py  migrate_transactions_to_hypertable.py  migrate_transactions_to_hypertable.sql  test_futu_live.py  test_tiger_live.py  validate_hypertable_migration.py
backend/src/: config.py  main.py
backend/src/alerts/: __init__.py  channels.py  config.py  factory.py  hub.py  models.py  repository.py  routing.py  service.py  setup.py
backend/src/api/: __init__.py  alerts.py  audit.py  backtest.py  degradation.py  greeks.py  health.py  options.py  orders.py  portfolio.py  reconciliation.py  risk.py  storage.py  strategies.py
backend/src/audit/: __init__.py  config.py  diff.py  factory.py  integrity.py  models.py  repository.py  service.py  setup.py
backend/src/backtest/: __init__.py  attribution.py  bar_loader.py  benchmark.py  benchmark_metrics.py  engine.py  fill_engine.py  ic_weight_calculator.py  math_utils.py  metrics.py  models.py  portfolio.py  trace.py  trace_builder.py
backend/src/broker/: __init__.py  base.py  config.py  errors.py  futu_broker.py  live_broker.py  paper_broker.py  query.py  tiger_broker.py
backend/src/core/: __init__.py  portfolio.py
backend/src/db/: __init__.py  database.py  redis_keys.py
backend/src/degradation/: __init__.py  breakers.py  cache.py  config.py  db_buffer.py  event_bus.py  models.py  probes.py  recovery.py  setup.py  state_service.py  trading_gate.py
backend/src/derivatives/: __init__.py  assignment_handler.py  expiration_manager.py  futures_roll.py
backend/src/governance/: __init__.py  cache.py  context.py  models.py
backend/src/greeks/: aggregator.py  alerts.py  black_scholes.py  calculator.py  futu_client.py  greeks_gate.py  iv_cache.py  limits_store.py  models.py  monitor.py  repository.py  scenario.py  v2_models.py  websocket.py
backend/src/health/: __init__.py  checkers.py  models.py  monitor.py  setup.py
backend/src/market_data/: __init__.py  models.py  processor.py  service.py
backend/src/models/: __init__.py  account.py  agent_result.py  close_request.py  derivative_contract.py  greeks.py  order.py  outbox.py  position.py  transaction.py
backend/src/options/: __init__.py  checker.py  idempotency.py  metrics.py  models.py  scheduler.py  thresholds.py
backend/src/orders/: __init__.py  manager.py  models.py
backend/src/reconciliation/: __init__.py  comparator.py  models.py  service.py
backend/src/risk/: __init__.py  manager.py  models.py  state.py
backend/src/schemas/: __init__.py  account.py  (+6 more)
backend/tests/: conftest.py  test_api_portfolio.py  test_base.py  test_context.py  test_engine.py  test_momentum_strategy.py  test_portfolio_manager.py  test_portfolio_repo.py  test_registry.py  test_signals.py
(+505 files in other folders)
